Fixing spacing

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ a {
 
 .open-book-img {
 	height: 50px;
-	margin-right: 7px;
+	margin-right: 15px;
 }
 
 a.title:hover {
